reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__actions__pipeline.rs_line_727_col_5_001.log

*** crates/tracewake-core/src/actions/pipeline.rs:727:5: replace controller_binding_check -> Option<PipelineDecision> with Some(Default::default())

*** mutation diff:
--- crates/tracewake-core/src/actions/pipeline.rs
+++ replace controller_binding_check -> Option<PipelineDecision> with Some(Default::default())
@@ -719,79 +719,17 @@
     }
 }
 
 fn controller_binding_check(
     context: PipelineReadContext<'_>,
     proposal: &Proposal,
     checked_facts: Vec<CheckedFact>,
 ) -> Option<PipelineDecision> {
-    if proposal.origin != ProposalOrigin::Human {
-        return None;
-    }
-
-    let Some(actor_id) = proposal.actor_id.as_ref() else {
-        return Some(reject(
-            context,
-            proposal,
-            PipelineStage::ControllerBindingCheck,
-            vec![ReasonCode::ControllerUnbound],
-            checked_facts,
-            "No controller is bound to that actor.",
-            "human-origin proposal did not name an actor for authorization",
-        ));
-    };
-
-    let Some(controller_id_value) = proposal.parameters.get("controller_id") else {
-        return Some(reject(
-            context,
-            proposal,
-            PipelineStage::ControllerBindingCheck,
-            vec![ReasonCode::ControllerUnbound],
-            checked_facts,
-            "No controller is bound to that actor.",
-            "human-origin proposal did not include controller_id metadata",
-        ));
-    };
-    let Ok(controller_id) = crate::ids::ControllerId::new(controller_id_value.clone()) else {
-        return Some(reject(
-            context,
-            proposal,
-            PipelineStage::ControllerBindingCheck,
-            vec![ReasonCode::ControllerUnbound],
-            checked_facts,
-            "No controller is bound to that actor.",
-            "human-origin controller_id was not a stable ID",
-        ));
-    };
-
-    match context
-        .controller_bindings
-        .map(|bindings| bindings.authorize(&controller_id, actor_id))
-    {
-        Some(Ok(())) => None,
-        Some(Err(ControllerError::ControllerActorMismatch { .. })) => Some(reject(
-            context,
-            proposal,
-            PipelineStage::ControllerBindingCheck,
-            vec![ReasonCode::ControllerActorMismatch],
-            checked_facts,
-            "That controller is bound to another actor.",
-            "human-origin controller binding did not match proposal actor",
-        )),
-        Some(Err(ControllerError::ControllerUnbound(_))) | None => Some(reject(
-            context,
-            proposal,
-            PipelineStage::ControllerBindingCheck,
-            vec![ReasonCode::ControllerUnbound],
-            checked_facts,
-            "No controller is bound to that actor.",
-            "human-origin controller was not bound",
-        )),
-    }
+    Some(Default::default()) /* ~ changed by cargo-mutants ~ */
 }
 
 fn source_context_check(
     context: PipelineReadContext<'_>,
     proposal: &Proposal,
     mut checked_facts: Vec<CheckedFact>,
 ) -> Option<PipelineDecision> {
     if proposal.origin == ProposalOrigin::Agent {


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): the file `crates/tracewake-core/src/actions/pipeline.rs` has changed (1781905938.975925278s, 5s after last build at 1781905933.431925277s)
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
warning: unused import: `ControllerError`
  --> crates/tracewake-core/src/actions/pipeline.rs:20:45
   |
20 | use crate::controller::{ControllerBindings, ControllerError};
   |                                             ^^^^^^^^^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0277]: the trait bound `PipelineDecision: Default` is not satisfied
   --> crates/tracewake-core/src/actions/pipeline.rs:727:10
    |
727 |     Some(Default::default()) /* ~ changed by cargo-mutants ~ */
    |          ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `PipelineDecision`
   --> crates/tracewake-core/src/actions/pipeline.rs:102:1
    |
102 | enum PipelineDecision {
    | ^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
warning: `tracewake-core` (lib) generated 1 warning
error: could not compile `tracewake-core` (lib) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
warning: `tracewake-core` (lib test) generated 1 warning (1 duplicate)
error: could not compile `tracewake-core` (lib test) due to 1 previous error; 1 warning emitted

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
